// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`esm.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- https://mdxjs.com/docs/what-is-mdx/#esm -->

import {   External} from './some/place.js'

export const   Local = properties => <span style={{color: 'red'}} {...properties} />

export const Local = (properties) => (
         <span    style={{   color: "red" }} {...properties} />
);

An <External>external</External> component and a <Local>local one</Local>.

=====================================output=====================================
<!-- https://mdxjs.com/docs/what-is-mdx/#esm -->

import { External } from "./some/place.js";

export const Local = (properties) => (
  <span style={{ color: "red" }} {...properties} />
);

export const Local = (properties) => (
  <span style={{ color: "red" }} {...properties} />
);

An <External>external</External> component and a <Local>local one</Local>.

================================================================================
`;

exports[`export-undefined.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export  {  foo}

=====================================output=====================================
export { foo };

================================================================================
`;

exports[`issue-13934.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export const attempt2 = (input) => {
    return input.split('\\n').map((line) => line.split(' ')).map((([them, me]) => {
       console.log(them, me);
    })).reduce((sum, [them, me]) => {
let round = 0;

if(me === "X") {round += 1;}

if(me === "Y"){ round += 2;}

    }, 0)

}

=====================================output=====================================
export const attempt2 = (input) => {
  return input
    .split("\\n")
    .map((line) => line.split(" "))
    .map(([them, me]) => {
      console.log(them, me);
    })
    .reduce((sum, [them, me]) => {
      let round = 0;

      if (me === "X") {
        round += 1;
      }

      if (me === "Y") {
        round += 2;
      }
    }, 0);
};

================================================================================
`;

exports[`issue-16241.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export function Example1() {
  const x =     '42';

  return x;
}

=====================================output=====================================
export function Example1() {
  const x = "42";

  return x;
}

================================================================================
`;

exports[`issue-17906.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export const description = \`
  # this is a test

  some text in the body
\`;

# the actual body

some more text <span className="test">test</span>

=====================================output=====================================
export const description = \`
  # this is a test

  some text in the body
\`;

# the actual body

some more text <span className="test">test</span>

================================================================================
`;

exports[`like-import-declaration.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- These are not \`import\`s -->

import .meta.resolve (         foo)

import .meta; export {} from "./foo"

import .meta; import {} from "./foo"

import ("./foo")

import {} from   "./foo";            export {}

=====================================output=====================================
<!-- These are not \`import\`s -->

import .meta.resolve (         foo)

import .meta; export {} from "./foo"

import .meta; import {} from "./foo"

import ("./foo")

import {} from "./foo";
export {};

================================================================================
`;

exports[`list.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
- import is a word in lists
- export is a word in lists, too!

=====================================output=====================================
- import is a word in lists
- export is a word in lists, too!

================================================================================
`;

exports[`no-specifier.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
Lorem ipsum dolor sit amet, consectetur adipiscing elit.

import {           } from "foo";
import "foo";

=====================================output=====================================
Lorem ipsum dolor sit amet, consectetur adipiscing elit.

import {} from "foo";
import "foo";

================================================================================
`;

exports[`paragraph.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import is a word

=====================================output=====================================
import is a word

================================================================================
`;

exports[`snippet: #0 format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import is a word
=====================================output=====================================
import is a word

================================================================================
`;

exports[`unterminated-comment.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export const a = 1; /* comment starts

comment ends */ export const b = "x   y";

# heading

=====================================output=====================================
export const a = 1;
/* comment starts

comment ends */ export const b = "x   y";

# heading

================================================================================
`;
